--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "gulp-angular-templatecache": "^1.7.0",
     "gulp-concat-css": "^2.2.0",
     "gulp-minify-css": "^1.2.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-size": "^2.0.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-tslint": "^3.2.0",
