--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "amd",
+    "module": "commonjs",
     "target": "es5",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -13,6 +13,7 @@
     "source/typings/tsd.d.ts",
     
     "source/ts/app.ts",
+    "source/ts/components/main/main-component.ts",
     
     "source/ts/utils/component-utils.ts",
     "source/ts/utils/di.ts",
