--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
     
     "source/ts/app.ts",
     "source/ts/components/main/main-component.ts",
+    "source/ts/components/task-list/task-list-component.ts",
+    "source/ts/components/login-form/login-form-component.ts",
+    "source/ts/components/task/task-component.ts",
     
     "source/ts/utils/component-utils.ts",
     "source/ts/utils/di.ts",
@@ -21,7 +24,8 @@
     "source/ts/utils/test-utils.ts",
     
     "source/ts/entry.test.ts",
-    "source/ts/simple.test.ts"
+    "source/ts/simple.test.ts",
+    "source/ts/components/task/task-component.test.ts"
     
   ]
 }
