--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
     "url": "https://github.com/rangle/ngcourse-next/issues"
   },
   "dependencies": {
+    "@reactivex/rxjs": "^5.0.0-alpha.10",
     "angular": "^1.4.7",
     "angular-ui-router": "^0.2.15",
     "basscss": "^7.0.4",
+    "es6-shim": "^0.34.0",
     "font-awesome": "^4.4.0",
     "immutable": "^3.7.5",
     "koast-angular": "^0.2.2",
     "lodash-compat": "^3.10.1",
+    "ng-forward": "0.0.1-alpha.11",
+    "reflect-metadata": "^0.1.2",
     "rx": "4.0.0"
   },
   "devDependencies": {
@@ -58,7 +62,7 @@
     "ts-loader": "^0.6.0",
     "tsd": "^0.6.5",
     "tslint-loader": "^1.0.2",
-    "typescript": "^1.6.2",
+    "typescript": "^1.7.5",
     "url-loader": "^0.5.6",
     "webdriverio": "^3.2.6",
     "webpack": "^1.12.2",
