--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "lodash-compat": "^3.10.1",
     "ng-forward": "0.0.1-alpha.11",
     "reflect-metadata": "^0.1.2",
-    "rx": "4.0.0"
+    "rx": "4.0.0",
+    "rxjs": "^5.0.0-beta.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.7",
