--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "url": "https://github.com/rangle/ngcourse-next/issues"
   },
   "scripts": {
+    "install": "rimraf typings && tsd install && tsd link",
     "server": "webpack-dev-server --inline --progress --profile --colors --display-error-details --display-cached",
     "start": "npm run server --watch"
   },
@@ -23,6 +24,9 @@
     "font-awesome": "^4.4.0",
     "html-webpack-plugin": "^1.7.0",
     "immutable": "^3.7.5",
+    "ng2-redux": "^2.0.2",
+    "redux": "^3.0.5",
+    "redux-thunk": "^1.0.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "^5.0.0-beta.0",
     "zone.js": "^0.5.10"
